--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
-    "next": "13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "4.8.4",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
-    "eslint-config-next": "^13.0.7"
+    "eslint-config-next": "^13.1.1"
   }
 }
