--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
+    "lodash.merge": "^4.6.2",
     "next": "^13.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +23,7 @@
     "zustand": "^4.1.5"
   },
   "devDependencies": {
+    "@types/lodash.merge": "^4.6.7",
     "eslint-config-next": "^13.2.3"
   }
 }
